[package]
name = "maze"
version = "0.0.1"
edition = "2024"

[lib]
name = "maze_core"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pyo3-build-config = "0.26"

[features]
pymodule = ["pyo3/extension-module", "pyo3/abi3-py310"]
default = []

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    # Parts of Bevy:
    "animation",                 # Enable animation for everything that supports it
    "bevy_asset",                # Asset management
    "bevy_color",                # Color management
    "bevy_core_pipeline",        # Bevy's GPU rendering architecture
    "bevy_gizmos",               # Gizmos (drawing debug lines and shapes)
    "bevy_image",                # Image support
    "bevy_input_focus",          # Input focusing system for UI
    "bevy_log",                  # Logging to console
    "bevy_mesh_picking_backend", # 3D mesh picking (selection by cursor)
    "bevy_pbr",                  # 3D rendering and Physically Based Shading
    "bevy_picking",              # Picking (selection of objects by cursor)
    "bevy_render",               # GPU support (based on `wgpu`)
    "bevy_scene",                # ECS Scenes
    "bevy_state",                # App state management
    "bevy_text",                 # Text rendering
    "bevy_ui",                   # UI toolkit
    "bevy_ui_picking_backend",   # UI node picking (selection by cursor)
    "bevy_window",               # Window management
    "bevy_winit",                # Cross-platform window management support

    "reflect_auto_register", # Enable automatic registration of Reflect types

    # Low-level tunables
    "std",            # Use the Rust standard library (important!)
    "async_executor", # Enable the Async Executor (Bevy task pools)
    "multi_threaded", # Enable CPU multithreading
    "sysinfo_plugin", # Support CPU and RAM usage diagnostics
    "custom_cursor",  # Support custom cursors

    # Platform-Specific
    "x11", # Linux: Support X11 windowing system

    # Built-in Data
    "default_font",     # Built-in default font for UI (Fira Mono)
    "smaa_luts",        # Support SMAA antialiasing
    "tonemapping_luts", # Support different camera Tonemapping modes (enables KTX2+zstd)
] }
pyo3 = { version = "0.26", features = ["serde"] }
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main", features = [
    "bevy_diagnostic",
    "diagnostic_ui",
    "debug-plugin",
] }
pyo3-stub-gen = "0.14.0"
bevy-inspector-egui = "0.34"
bevy_gizmos = "0.17.1"
derivative = "2.2.0"
serde = "1.0.228"
serde_json = "1.0.145"
pythonize = "0.26.0"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
serde_yaml = "0.9.34"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "stub_gen"
doc = false
