[package]
name = "maze"
version = "0.0.1"
edition = "2024"

[lib]
name = "maze_core"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pyo3-build-config = "0.26"

[features]
pymodule = ["pyo3/extension-module", "pyo3/abi3-py310"]
default = []

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    # Engine / core
    "async_executor",
    "std",
    "multi_threaded",
    "reflect_auto_register",
    "sysinfo_plugin",
    "debug",

    # Core subsystems
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",

    # Graphics options
    "tonemapping_luts",
    "zstd_rust",

    # Platform specific
    "x11",

    # Built-in data / assets
    "default_font",
] }
pyo3 = { version = "0.26", features = ["serde"] }
pyo3-stub-gen = "0.14.0"

avian3d = { git = "https://github.com/Jondolf/avian", branch = "main", features = [
    "bevy_diagnostic",
    "diagnostic_ui",
    "debug-plugin",
] }
bevy-inspector-egui = "0.34"
bevy_gizmos = "0.17.1"
derivative = "2.2.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
crossbeam-channel = "0.5.15"
anyhow = "1.0.100"
maze_generator = "2.0.0"
rand_distr = "0.5.1"
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "stub_gen"
doc = false
